# hyperdot

./: .gitignore  Cargo.toml  README.md
.local/: config.json  storage-args.json
docs/: hyperctl.md  runtime_build.md
metadatas/: runtime_api_gen.rs
scripts/: data.sql  substrate.sql
src/hyperdot-binaries/: Cargo.toml
src/hyperdot-binaries/apiserver/: main.rs
src/hyperdot-binaries/ctl/: main.rs
src/hyperdot-binaries/ctl/commands/: metadata_codegen.rs  mod.rs
src/hyperdot-binaries/storage/: main.rs
src/hyperdot-binaries/streaming/: main.rs
src/hyperdot-common/config/: Cargo.toml
src/hyperdot-common/config/src/: lib.rs
src/hyperdot-common/macros/: Cargo.toml
src/hyperdot-common/macros/src/: lib.rs
src/hyperdot-common/rpc/: Cargo.toml
src/hyperdot-common/rpc/src/: blocks.rs  client.rs  jsee.rs  lib.rs
src/hyperdot-common/types/: Cargo.toml
src/hyperdot-common/types/src/: lib.rs
src/hyperdot-common/utils/: Cargo.toml
src/hyperdot-core/: Cargo.toml  build.rs  metadata.json
src/hyperdot-core/src/: config.rs  lib.rs  metadata.rs  protocols.rs  runtime_api.rs  types.rs  utils.rs
src/hyperdot-core/src/runtime_api/: kusama.rs  mod.rs  polkadot.rs
src/hyperdot-node/: Cargo.toml
src/hyperdot-node/src/: blocks.rs  indexer.rs  lib.rs  runtime_api.rs  runtime_api_gen.rs  storage.rs  types.rs
src/hyperdot-node/src/api/: handle.rs  mod.rs  route.rs  server.rs
src/hyperdot-node/src/block/: handle.rs  mod.rs  streaming.rs  sync.rs
src/hyperdot-node/src/rpc/: json.rs  mod.rs
src/hyperdot-node/src/speaker/: child.rs  controller.rs  mod.rs  ops.rs
src/hyperdot-node/src/storeage/: channel.rs  controller.rs  jsonrpc.rs  mod.rs  ops.rs  postgres.rs  storage_url.rs  utils.rs
src/hyperdot-node/src/storeage/client/: jsonrpc.rs  mod.rs
src/hyperdot-node/src/storeage/controller/: controller.rs  mod.rs  ops.rs  postgres.rs  url.rs  utils.rs
src/hyperdot-node/src/storeage/engine/: controller.rs  engine.rs  mod.rs  postgres.rs
src/hyperdot-node/src/storeage/engine/pg/: mod.rs  pg.rs  writer.rs
src/hyperdot-node/src/storeage/models/v1/: mod.rs  polkadot.rs
src/hyperdot-node/src/storeage/server/: jsonrpc.rs  mod.rs  server.rs
src/hyperdot-node/src/storeage/server/api/: mod.rs  route.rs  server.rs  service.rs
src/hyperdot-node/src/storeage/server/api/core/: core.rs  mod.rs  model.rs
src/hyperdot-node/src/storeage/server/api/model/: core.rs
src/hyperdot-node/src/storeage/server/api/v1/: dataengine.rs  mod.rs  model.rs  polkadot.rs  query.rs  system.rs
src/hyperdot-node/src/streaming/: mod.rs  streaming.rs
src/hyperdot-node/src/streaming/block/: block.rs  controller.rs  handle.rs  handle_pallet.rs  mod.rs  streaming.rs  sync.rs
src/hyperdot-node/src/streaming/block/extracts/: mod.rs  substrate.rs
src/hyperdot-node/src/streaming/etl/: mod.rs  streaming.rs  sync.rs
src/hyperdot-node/src/streaming/etl/extracts/: mod.rs  polkadot.rs
src/hyperdot-node/src/streaming/speaker/: child.rs  controller.rs  mod.rs  ops.rs  url.rs
src/hyperdot-node/src/types/: block.rs  mod.rs  polkadot.rs  rpc.rs
src/hyperdot-node/src/types/pallet/: balance.rs  indices.rs  mod.rs  runtime.rs  system.rs  utils.rs
