[workspace.package]
version = "0.1.0"
edition = "2021"
authors = [
    "Infra3 teams <infra3.net@gmail.com>"
]

[workspace.dependencies]
jsonrpsee = { version = "0.18.2", features = ["full"]}
serde = { version = "1.0" }
serde_json = { version = "1.0" }
anyhow = { version = "1.0" }
tokio = { version = "1", features = ["full"] }
async-trait = { version = "0.1"}
futures = { version = "0.3" }
lazy_static = { version = "1.4.0" }
tracing = { version = "0.1.34" }
subxt = { version = "0.29" }

[workspace]
members = [
    "src/hyperdot-common/rpc",
    "src/hyperdot-common/macros",
    "src/hyperdot-common/types",
    "src/hyperdot-node",
    "src/hyperdot-binaries"
]