[package]
name = "hyperdot-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true, features = ["derive"]}
serde_json = { workspace = true }
anyhow = { workspace = true}
tokio-postgres = { version = "0.7", features = ["with-bit-vec-0_6", "array-impls"] }
rust_decimal = { version = "1.29", features = ["tokio-pg"] }

[build-dependencies]
serde = { workspace = true, features = ["derive"]}
serde_json = { workspace = true }
anyhow = { workspace = true}
lazy_static = { workspace = true}
subxt-codegen = { version = "0.29" }
syn = { version = "2.0" }
quote = { version = "1.0" }