[package]
name = "hyperdot-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true, features = ["derive"]}
serde_json = { workspace = true }
anyhow = { workspace = true}
tokio-postgres = { version = "0.7", features = ["with-bit-vec-0_6", "array-impls"] }
rust_decimal = { version = "1.29", features = ["tokio-pg"] }

[build-dependencies]
