[package]
name = "hyperdot-common-rpc"
version = "0.1.0"
edition = "2021"

[dependencies]
jsonrpsee = { version = "0.18.2", features = ["full"]}
serde = { version = "1.0" }
serde_json = { version = "1.0" }
anyhow = { version = "1.0" }
futures = { version = "0.3" }
tokio = { version = "1", features = ["full"] }
subxt = { version = "0.28" }
hex = { version = "0.4.3" }


[build-dependencies]
