[package]
name = "hyperdot-common-rpc"
version = "0.1.0"
edition = "2021"

[dependencies]
jsonrpsee = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true}

subxt = { version = "0.28" }
hex = { version = "0.4.3" }


[build-dependencies]
